// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceBadge should also render the discount when it is active 1`] = `
<glamorous(div)>
  <glamorous(div)>
    <span>
      -
      5
       %
    </span>
    <span>
      15,00
      €
    </span>
  </glamorous(div)>
  <glamorous(p)
    isDiscounted={true}
  >
    10,00
     €
  </glamorous(p)>
  <glamorous(p)>
    unit unit / unit
  </glamorous(p)>
</glamorous(div)>
`;

exports[`PriceBadge should only render the price if no discount is active 1`] = `
<glamorous(div)>
  <glamorous(p)>
    10,00
     €
  </glamorous(p)>
  <glamorous(p)>
    unit unit / unit
  </glamorous(p)>
</glamorous(div)>
`;
